--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* *{
+    box-sizing: inherit;
+} */
+
 html {
     box-sizing: border-box;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -27,6 +31,7 @@ header {
     background-color: white;
     padding: 0.5rem;
     display: inline;
+    z-index: 1;
 }
 nav {
     position: fixed;
@@ -50,53 +55,42 @@ nav li {
     margin-left: 0.5rem;
 }
 nav form {
-    display: inline;
-    position: relative;
-    margin-left: 7rem;
-    top: 0.5rem;
-}
-.cart {
-    display: inline;
     position: relative;
     text-align: right;
-    top: 0.5rem;
-    margin-left: 2rem;
+    margin-right: 3rem;
+    top: 0rem;
+}
+.cart {
+    position: inherit;
+    text-align: right;
+    top: 1rem;
+    margin-right: 5rem;
+    width: 100%;
 }
 main {
     position: relative;
-}
-footer {
-    background-color:#bf7631; 
-    text-align: center;
-    list-style-type: none;
-    
 }
 .HOME {
     background-image: url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 80%;
+    background-size: 100%;
     width: 100%;
     height: 633px;
-    background-color:rgba(255, 255, 255, 0) ;
+    background: linear-gradient(255deg, black, transparent, black) url(./assets/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg) ;
     color: white;
     padding-top: 5rem;
 }
 .left {
-    display: block;
-    background-origin: padding-box;
     text-align: left;
-    background-color: black;
     padding-left: 0rem;
-    width: 10%;
+    width: 100%;
     height: 500px;
 }
 .right {
     text-align: right;
-    background-color: black;
-    background-position: right;
     padding-right: 0rem;
-    width: 10%;
+    width: 100%;
     height: 500px;
 }
 .ABOUT {
@@ -108,32 +102,90 @@ footer {
         "para1 para1 img1"
         "img2 para2 img1"
         "img2 para3 img1";
+    gap: 2rem;
+    align-items: end;
 }
 .para1 {
-    grid-column: 1/2;
-    grid-row: 1;
+    grid-area: para1;
 }
 .img1 {
-    grid-column: 3;
-    grid-row: 1/3;
+    grid-area: img1;
 }
 .img2 {
-    grid-column: 1;
-    grid-row: 2/3;
+    grid-area: img2;
 }
 .para2 {
-    grid-column: 2;
-    grid-row: 2;
+    grid-area: para2;
 }
 .para3 {
-    grid-column: 2;
-    grid-row: 3;
+    grid-area: para3;
 }
 .cards{
-    margin: 1rem;
     box-sizing: content-box;
     display: flex;
     position: relative;
-    padding: 1rem;
+    flex-wrap: wrap;
 
+}
+.card1 {
+    width: 25rem;
+    padding: 2rem;
+}
+.card2 {
+    width: 25rem;
+    padding: 2rem;
+}
+.card3 {
+    width: 25rem;
+    padding: 2rem;
+}
+.card4 {
+    width: 25rem;
+    padding: 2rem;
+}
+.card5 {
+    width: 25rem;
+    padding: 2rem;
+}
+.card6 {
+    width: 25rem;
+    padding: 2rem;
+}
+.card7 {
+    width: 25rem;
+    padding: 2rem;
+}
+.card8 {
+    width: 25rem;
+    padding: 2rem;
+}
+.CONTACT {
+    padding: 3rem;
+}
+.contact form {
+    text-align: center;
+}
+footer {
+    background-color:#bf7631;
+}
+.cara a {
+    text-decoration: none;
+    text-align: center;
+    color: black;
+}
+.link-list ul a{
+    list-style-type: none;
+    position: absolute;
+}
+.link-list li{
+    list-style-type: none;
+    position: relative;
+    display: inline;
+    padding: 5rem;
+    margin-left: 8.5rem;
+}
+.bottom {
+    text-align: center;
+    position: relative;
+    padding: 2rem;
 }
